Spacing Fixes & Favicon

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ a:visited {
 
 footer {
     border-top: 4px solid #24FF33;
-    padding-top: 50px;
+    padding-block: 32px;
     background-color: #111111
 }
 
@@ -80,6 +80,7 @@ footer {
     width: 128px;
     height: 128px;
     padding: 12px;
+	margin: 12px;
     border-radius: 1rem;
     overflow: visible;
     background: #24FF33;
